objects/ASI_CRM_KR_Required_Calls_for_Off_Trade__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>required calls for off-trade customers</description>
    <fields>
        <fullName>ASI_CRM_KR_Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Required_No_of_Call__c</fullName>
        <description>Required No # of call</description>
        <label>Required No of Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>ASI CRM KR Required Calls for Off-Trade</label>
    <listViews>
        <fullName>Required_No_of_call_Off_trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Year__c</columns>
        <columns>ASI_CRM_KR_Month__c</columns>
        <columns>ASI_CRM_KR_Required_No_of_Call__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Required No. of call - Off trade</label>
        <language>en_US</language>
    </listViews>
</CustomObject>